# flashrepo

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
public/ruffle/: core.ruffle.91563336b56d316b805d.js  core.ruffle.91563336b56d316b805d.js.map  core.ruffle.a08052c6cfd09b8cbe19.js  core.ruffle.a08052c6cfd09b8cbe19.js.map  package.json  ruffle.js  ruffle.js.map
src/: App.css  App.tsx  global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddGameButton.tsx  AppContextProvider.tsx  BackButton.tsx  Container.tsx  GameCard.tsx  GameScreenshot.tsx  PlayButton.tsx  Rating.tsx  RufflePlayer.tsx  TagBadge.tsx  TagCommandDialog.tsx  TagList.tsx  TagSelect.tsx  UpdateProgramButton.tsx  UpdateScreenshotButton.tsx
src/lib/: repo.ts  use-auto-save-state.ts  use-game-program-url.ts  use-game-screenshot-url.ts  use-listen.ts  use-watchdog.ts
src/views/: EditGameView.tsx  EditTagView.tsx  GameView.tsx  HomeView.tsx  LoadingView.tsx  PlayGameView.tsx  TagsView.tsx
